# swagger.json
@@ -1,21 +1,38 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "My API",
-    "description": "Members API, including coaches",
+    "title": "Product & Sellers API",
+    "description": "Product & Sellers ",
     "version": "1.0.0"
   },
-  "host": "cse341-project2-tiqd.onrender.com",
+  "host": "localhost:10000",
   "basePath": "/",
   "schemes": [
-    "https"
+    "http"
   ],
   "paths": {
+    "/login": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/logout": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
     "/": {
       "get": {
-        "tags": [
-          "Hello World"
-        ],
         "description": "",
         "responses": {
           "200": {
@@ -24,10 +41,10 @@
         }
       }
     },
-    "/members/": {
+    "/products/": {
       "get": {
         "tags": [
-          "Members"
+          "Products"
         ],
         "description": "",
         "produces": [
@@ -36,15 +53,12 @@
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "500": {
-            "description": "Internal Server Error"
           }
         }
       },
       "post": {
         "tags": [
-          "Members"
+          "Products"
         ],
         "description": "",
         "parameters": [
@@ -57,19 +71,25 @@
                 "name": {
                   "example": "any"
                 },
-                "age": {
+                "category": {
                   "example": "any"
                 },
-                "membershipType": {
+                "price": {
                   "example": "any"
                 },
-                "joinDate": {
+                "stockQuantity": {
                   "example": "any"
                 },
-                "contactNumber": {
+                "brand": {
                   "example": "any"
                 },
-                "coachId": {
+                "rating": {
+                  "example": "any"
+                },
+                "dateAdded": {
+                  "example": "any"
+                },
+                "isAvailable": {
                   "example": "any"
                 }
               }
@@ -83,8 +103,8 @@
           "400": {
             "description": "Bad Request"
           },
-          "412": {
-            "description": "Precondition Failed"
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -92,10 +112,10 @@
         }
       }
     },
-    "/members/{id}": {
+    "/products/{id}": {
       "get": {
         "tags": [
-          "Members"
+          "Products"
         ],
         "description": "",
         "produces": [
@@ -113,17 +133,14 @@
           "200": {
             "description": "OK"
           },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
+          "400": {
+            "description": "Bad Request"
           }
         }
       },
       "put": {
         "tags": [
-          "Members"
+          "Products"
         ],
         "description": "",
         "parameters": [
@@ -142,19 +159,25 @@
                 "name": {
                   "example": "any"
                 },
-                "age": {
+                "category": {
                   "example": "any"
                 },
-                "membershipType": {
+                "price": {
                   "example": "any"
                 },
-                "joinDate": {
+                "stockQuantity": {
                   "example": "any"
                 },
-                "contactNumber": {
+                "brand": {
                   "example": "any"
                 },
-                "coachId": {
+                "rating": {
+                  "example": "any"
+                },
+                "dateAdded": {
+                  "example": "any"
+                },
+                "isAvailable": {
                   "example": "any"
                 }
               }
@@ -168,11 +191,8 @@
           "400": {
             "description": "Bad Request"
           },
-          "404": {
-            "description": "Not Found"
-          },
-          "412": {
-            "description": "Precondition Failed"
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -181,7 +201,7 @@
       },
       "delete": {
         "tags": [
-          "Members"
+          "Products"
         ],
         "description": "",
         "parameters": [
@@ -196,8 +216,11 @@
           "204": {
             "description": "No Content"
           },
-          "404": {
-            "description": "Not Found"
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -205,10 +228,10 @@
         }
       }
     },
-    "/coaches/": {
+    "/sellers/": {
       "get": {
         "tags": [
-          "Coaches"
+          "Sellers"
         ],
         "description": "",
         "produces": [
@@ -217,15 +240,12 @@
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "500": {
-            "description": "Internal Server Error"
           }
         }
       },
       "post": {
         "tags": [
-          "Coaches"
+          "Sellers"
         ],
         "description": "",
         "parameters": [
@@ -235,16 +255,22 @@
             "schema": {
               "type": "object",
               "properties": {
-                "name": {
+                "firstName": {
                   "example": "any"
                 },
-                "specialty": {
+                "lastName": {
                   "example": "any"
                 },
-                "experienceYears": {
+                "email": {
                   "example": "any"
                 },
-                "contactNumber": {
+                "joinDate": {
+                  "example": "any"
+                },
+                "productsSold": {
+                  "example": "any"
+                },
+                "isActive": {
                   "example": "any"
                 }
               }
@@ -258,8 +284,8 @@
           "400": {
             "description": "Bad Request"
           },
-          "412": {
-            "description": "Precondition Failed"
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -267,10 +293,10 @@
         }
       }
     },
-    "/coaches/{id}": {
+    "/sellers/{id}": {
       "get": {
         "tags": [
-          "Coaches"
+          "Sellers"
         ],
         "description": "",
         "produces": [
@@ -288,17 +314,14 @@
           "200": {
             "description": "OK"
           },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
+          "400": {
+            "description": "Bad Request"
           }
         }
       },
       "put": {
         "tags": [
-          "Coaches"
+          "Sellers"
         ],
         "description": "",
         "parameters": [
@@ -314,16 +337,22 @@
             "schema": {
               "type": "object",
               "properties": {
-                "name": {
+                "firstName": {
                   "example": "any"
                 },
-                "specialty": {
+                "lastName": {
                   "example": "any"
                 },
-                "experienceYears": {
+                "email": {
                   "example": "any"
                 },
-                "contactNumber": {
+                "joinDate": {
+                  "example": "any"
+                },
+                "productsSold": {
+                  "example": "any"
+                },
+                "isActive": {
                   "example": "any"
                 }
               }
@@ -337,11 +366,8 @@
           "400": {
             "description": "Bad Request"
           },
-          "404": {
-            "description": "Not Found"
-          },
-          "412": {
-            "description": "Precondition Failed"
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -350,7 +376,7 @@
       },
       "delete": {
         "tags": [
-          "Coaches"
+          "Sellers"
         ],
         "description": "",
         "parameters": [
@@ -365,8 +391,11 @@
           "204": {
             "description": "No Content"
           },
-          "404": {
-            "description": "Not Found"
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -374,5 +403,8 @@
         }
       }
     }
-  }
+  },
+  "schema": [
+    "https"
+  ]
 }
